--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -475,9 +475,19 @@ the website, in dark theme
   color: var(--title-color);
 }
 
-.questions__description{
-  font-size: var(--smaller-font-size);
-  padding: 0 1.25rem 1.25rem 2.5rem;
+.questions__description {
+    font-size: 1.1em;
+    line-height: 1;
+    padding: 5px;
+    border-radius: 8px;
+    margin-bottom: 15px;
+}
+
+.questions__description strong {
+    font-size: 1.2em;
+    color: #ffffff;
+    display: block;
+    margin-bottom: 6px;
 }
 
 .questions__header{
@@ -1042,4 +1052,40 @@ h1 {
   .scrollup{
     right: 3rem;
   }
+}
+
+/* Modal styles */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
